fix about spacing for display size, hide socials for phones

--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -1,16 +1,13 @@
 .about-box {
   height: '100vh';
   min-height: '100vh';
-  padding-top: 200px;
+  margin-top: 19%;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
 }
 
 .about-me {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   text-align: justify;
   text-justify: inter-word;
 }
